[project]
name = "audiblez"
version = "0.3.5"
authors = [
    { name = "Claudio Santini", email = "hireclaudio@gmail.com" }
]
description = "Generate audiobooks from e-books (epub to wav/m4b)"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ebooklib (>=0.18,<0.19)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pick (>=2.4.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pydub (>=0.25.1,<0.26.0)",
    "spacy (>=3.8.3,<4.0.0)",
    "yaspin (>=3.1.0,<4.0.0)",
    "kokoro (>=0.7.9,<0.8.0)",
    "misaki[zh] (>=0.7.10,<0.8.0)",
    "pip>=25.0",
]

[project.scripts]
audiblez = "audiblez:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
